Разметил форму обратной связи "Остались вопросы?";

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 .price-list {
   width: 100%;
   border-collapse: collapse;
-  border-spacing: 0;
 }
 
 .price-list th {
@@ -30,6 +29,10 @@
 
 .price-list .price-name {
   font-weight: bold;
+}
+
+.feedback-form-group {
+  padding: 10px 0;
 }
 
 .page-footer {
